@@ -5,6 +5,7 @@ Copyright (C) 2011 Collabora
 
 Version 0.3.7 - DD.Apr.2012
 * Fix vaapidecode to report unsupported codec profiles
+* Fix decoding of MPEG-2 High profile streams compatible with Main profile
 * Don't forcibly resize user provided X windows (Holger Kaelberer)
 * Recalculate render rect only if caps are negotiated (Holger Kaelberer)
 
